--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,4 +23,4 @@ jobs:
         uses: gittools/actions/gitversion/execute@v0.9.7
       - name: Display SemVer
         run: |
-          echo "SemVer: $GITVERSION_SEMVER"
+          echo "SemVer: $GITVERSION_MAJORMINORPATCH"
